# dinov3-jax

./: .gitignore  pyproject.toml  vis.ipynb  vis_dpg.py
dinov3_jax/: __init__.py  config.py  loading.py  model.py  vision_transformer.py
dinov3_jax/eepynox/: debug.py  test_util.py  utils.py
dinov3_jax/eepynox/nn/: activation.py  conv2d.py  linear.py
dinov3_jax/layers/: __init__.py  attention.py  block.py  embeddings.py  ffn_layers.py  layer.py  layer_scale.py  mlp.py  patch_embed.py  rms_norm.py  rope.py  rope_position_encoding.py
dinov3_jax/tests/: test_attention.py  test_block.py  test_ffn_layers.py  test_layer_scale.py  test_patch_embed.py  test_rms_norm.py  test_rope_position_encoding.py  test_vision_transformer.py
dinov3_jax/utils/: __init__.py  pjit.py  weight_converter.py
eepynox/: test_util.py
eepynox/nn/: activation.py  conv2d.py  linear.py
tests/: conftest.py  test_attention.py  test_block.py  test_ffn_layers.py  test_hf_equivalence.py  test_layer_scale.py  test_patch_embed.py  test_rms_norm.py  test_rope_position_encoding.py  test_uwu.py  test_vision_transformer.py
