[project]
name = "dinov3-jax"
version = "0.1.0"
description = "DINOv3 jax port"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.8.2",
    "torch",
    "torchvision",
    "flash-attn-jax>=0.5.4",
    "pytest",
    "numpy",
    "scipy",
    "scikit-learn",
    "einops",
    "tqdm",
    "matplotlib",
    "ipykernel",
    "ipywidgets",
    "Pillow",
    "pydantic",
    "equinox",
    "safetensors",
    "transformers",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "lovely-jax",
    "lovely-tensors",
    "dearpygui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dinov3_jax"]

[tool.ruff]
ignore = ["F722"]